--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,8 +5,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Corona Virus Tracker" />
-  <title>Corona Virus Tracker</title>
+  <meta name="description" content="people who are affected by COVID-19 and
+   undergo critical health condition are suggested to have plasma therapy.
+    for this they need a donor who is already recovered from covid and not have any other chronic diseases.
+     This web app helps them find those donor and also additionally helps other covid affected patients to 
+     find hospital nearby having bed vacancy." />
+  <title>Plasma Donor Portal</title>
 </head>
 
 <body>
